[package]
name = "cse311_ds"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "bubble_sort"
path = "src/bubble_sort.rs"

[[bin]]
name = "traversing"
path = "src/traversing.rs"

[[bin]]
name = "insert_into_array"
path = "src/insert_into_array.rs"

[[bin]]
name = "del_frm_ar"
path = "src/del_frm_ar.rs"
[[bin]]
name = "linear_search"
path = "src/linear_search.rs"

[[bin]]
name = "binary_search"
path = "src/binary_search.rs"

